substance type import modified